MARP-2239 Feedback approval enhancement (#336)